# bayes-i-exam

./: README.md  pyproject.toml  requirements.txt
data/: MC_samples_light5.npy  observed_data.npy  observed_data_light5.npy
experiments/: config1.yaml  config2.yaml  config_light.yaml  config_light3.yaml  config_light4.yaml  config_light5.yaml
presentation/: main.tex
scripts/: coverage_map.py  generate_data.py  plot_marginal_posteriors.py  pp_plot.py  run_MCMC.py  train.py
scripts/lightning_logs/version_0/: events.out.tfevents.1742405700.UX3402VA.571910.0
src/sbi/: __init__.py  dataset.py  model.py  sampler.py  simulator.py  utils.py
test/: test_.py
trained_models/: model_light_v2.pth
