build-backend = "setuptools.build_meta"


[project]
name = "sbi"
version = "0.0.1"
description = "PROJECT OF THE EXAM BAYESIAN INFERENCE I"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Gianmarco Puleo", email = "74814411+g-puleo@users.noreply.github.com" }]
dynamic = ["dependencies"]

[tool.setuptools.packages.find]

where = ["src"]
exclude = ["test", "experiments"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
test = ["pytest"]
                   
